--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "bootstrap": "^5.3.0-alpha1",
     "json-server": "^0.17.2",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
